--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,10 @@ tqdm>=4.65.0
 # Optional: For better performance with Zarr
 zarr>=2.16.0
 dask>=2023.0.0
+
+# HTTP filesystem access for remote Zarr stores
+requests>=2.31.0
+aiohttp>=3.9.0
+
+# Scientific computing (required for xarray interpolation)
+scipy>=1.11.0
