Dev justin | Monitoring, Benchmarks (#14)
* Refactor code structure for improved readability and maintainability

* Implement low-memory mode for glacier monitoring: save NDSI tiles to disk, reduce max scenes, and adjust output handling.

* points for single seeds

* single seeds algorithm, processing time, visual notebook for when using the pyhton script

* Refactor visualization notebook: update execution counts, improve snow percentage handling, and enhance map center calculation

* old and new script

* Add all configuration settings in glacier monitoring script

* Add Proxmox monitoring functionality to glacier monitoring script

* Refactor code structure for improved readability and maintainability

* Add CellTimingTracker class to monitor processing times for glacier monitoring cells

* Refactor code structure for improved readability and maintainability

* Remove max cloud cover argument from command line options in glacier monitoring script

* Update max_iterations in configuration for spatial expansion to improve processing efficiency

* Add HTTP filesystem access and scientific computing dependencies to requirements

* Organize requirements.txt into sections for better clarity and maintainability

* Memory in GB instead of %

* benchmarking visualization

* benchmark data geojson, json

* benchmark tifs

* color changes

* repo cleanup

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 # Glacier Monitoring Script - Python Dependencies
 # Install with: pip install -r requirements.txt
 
+# =============================================================================
+# CORE GEOSPATIAL PROCESSING
+# =============================================================================
+
 # Geospatial data processing
 geopandas>=0.14.0
 shapely>=2.0.0
@@ -15,9 +19,44 @@ xarray>=2023.0.0
 numpy>=1.24.0
 pandas>=2.0.0
 
+# =============================================================================
+# REMOTE DATA ACCESS
+# =============================================================================
+
 # STAC catalog access
 pystac-client>=0.7.0
 
-# Optional: For better performance with Zarr
+# HTTP filesystem access for remote Zarr stores
+requests>=2.31.0
+aiohttp>=3.9.0
+urllib3>=2.0.0
+
+# =============================================================================
+# PERFORMANCE & DISTRIBUTED COMPUTING
+# =============================================================================
+
+# Zarr data format support
 zarr>=2.16.0
-dask>=2023.0.0
+
+# Distributed/parallel computing (required for notebooks with LocalCluster)
+dask[complete]>=2023.0.0
+
+# Scientific computing (required for xarray interpolation)
+scipy>=1.11.0
+
+# =============================================================================
+# VISUALIZATION
+# =============================================================================
+
+# Interactive mapping
+folium>=0.15.0
+
+# Plotting
+matplotlib>=3.7.0
+
+# =============================================================================
+# UTILITIES
+# =============================================================================
+
+# Progress bars
+tqdm>=4.65.0
